include GIT tutorial until remote repository

--- a/u01/00_notebooks/0005_GIT_and_version_control.ipynb
+++ b/u01/00_notebooks/0005_GIT_and_version_control.ipynb
@@ -11,12 +11,7 @@
     "### What is Version Control and why do you need it\n",
     "### What is GIT\n",
     "### Install GIT\n",
-    "**GitHub for Windows**\n",
-    "https://windows.github.com\n",
-    "**GitHub for MacOS**\n",
-    "https://mac.github.com\n",
-    "**GitHub for Linux**\n",
-    "http://git-scm.com\n",
+    "\n",
     "\n",
     "### Configure\n",
     "GIT can store information about the user in three places. Global, User, and Project. To configure user's information for all local repositories `git config --global user.name \"[name]\"`. This sets the name you want attached to all your commit transactions.\n",
@@ -48,17 +43,20 @@
     "- **staged** is the space in memory to prepare the version. All files added to the stage will belong to the changes in a particular version. You use `git add [filename -A]` to stage a file to a new version.\n",
     "- **commiting** when you commit the version `git commit -m \"message\"` all the modifications done in the files that were staged will be implemented to the new version. So the application goes back to **unmodified** stage for a new version.\n",
     "\n",
-    "<img src=\"usr/gitlc.png\" width=\"500\">\n",
-    "<img src=\"usr/gitlcedukera.png\" width=\"500\">\n",
+    "<img src=\"usr/git_lifecycle.jpeg\" width=\"800\">\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "### Make Changes\n",
-    "Review edits and craft a commit transaction\n",
-    "`git status`\n",
     "\n",
-    "If you create a new file in the folder and type `git status` you will see the file listed as untracked.\n",
+    "### Tracking and Making Changes\n",
+    "As you are going to see, the different versions in GIT are represented in a Tree like structure. Each new version is a new point in this tree so it becomes bigger the more versions you have. You can also create a **branch**, or a parallel and independent series of versions that share a common ancestral version. This is useful to try different ideas or to keep the production code stable while different teams work on different parts of the system. Later, these branches can also **merge**, so you can incorporate the changes of different branches to one main code. \n",
+    "\n",
+    "Because the tree grows up, the tip of the tree, or the last committed version in the current working branch is called the **HEAD**. You can think of the HEAD as the \"current branch\". Later we are going to discuss how to use branches and merges. For now we are going to assume that you only have one branch and wants to keep track of the versions there.\n",
+    "\n",
+    "First you need to be able to track the files in your repository and know their status regarding the lifecycle. To do that you use: `git status`.\n",
+    "\n",
+    "To understand this better, lets create a file and move it through different stages of its life cycle. If you create a new file in the folder and type `git status` you will see the file listed as untracked.\n",
     "\n",
     "To stage that file so it is tracked by GIT and make part of a new version, type\n",
     "`git add [file]` this will set the file as a **new file** in the repository.\n",
@@ -98,7 +96,17 @@
     "- `git reset --hard [commit reference]` It will completely ignore the changes between the last commit and the previous one. So the previous version will be restored.\n",
     "Be careful because the reset command affects the history of your repository.\n",
     "\n",
+    "### Remote Repository\n",
+    "A **remote repository** in Git is a common repository used by all team members to exchange their updates. Often, the remote repository is stored on a On-Line hosting service like GitHub(https://github.com/) or BitBucket(https://bitbucket.org/product) or on a server within the institution's LAN (Local Area Network). In contrast to the **local repository**, the remote repository doesn't typically provide a file tree of the project's current state.\n",
     "\n",
+    "To use a remote repository you need to subscribe to one of the online services, we recommend github. Then you can start a new repository or a new organization.\n",
+    "\n",
+    "**GitHub for Windows**\n",
+    "https://windows.github.com\n",
+    "**GitHub for MacOS**\n",
+    "https://mac.github.com\n",
+    "**GitHub for Linux**\n",
+    "http://git-scm.com\n",
     "\n",
     "### Group Changes\n",
     "Name a series of commits and combine completed efforts\n",
