Add Basic information about the spyder

--- a/u01/00_notebooks/0003_IDEs_Jupyter_Spyder_And_Markup.ipynb
+++ b/u01/00_notebooks/0003_IDEs_Jupyter_Spyder_And_Markup.ipynb
@@ -156,20 +156,55 @@
     "\n",
     "You can insert LateX code inside jupyter notebook by inserting /$ *latex code here* \\$ for inline latex code or \\$\\$ *latex code here* \\$\\$ for centralized single line code.\n",
     "\n",
-    "$$ \\sigma \\frac{-\\sum_{i=1}^{\\infty}2i^2}{\\theta x}$$\n",
-    "\n",
-    "#### 3.2 Ipython\n",
-    "% matplotlib inline\n",
-    "% matplotlib qt\n",
-    "\n"
+    "$$ \\sigma \\frac{-\\sum_{i=1}^{\\infty}2i^2}{\\theta x}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.3 Spyder"
+    "### 3.3 Ipython\n",
+    "\n",
+    "Any terminal command can be given to the Ipython console with the use of **!** before it. This will be very handy for version control operations.\n",
+    "\n",
+    "Magic commands:\n",
+    "- % matplotlib inline\n",
+    "- % matplotlib qt\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Spyder\n",
+    "Sypder is a graphical IDE for python shaped to imitate MATLAB. It has all of its main components: \n",
+    "- An Editor\n",
+    "- A command line console\n",
+    "- A help (Ctrl/Command + i)\n",
+    "- A File explorer\n",
+    "- Outliner\n",
+    "- Integrated Debugger\n",
+    "\n",
+    "You can start a new project by selecting *Projects-> New Project...*. \n",
+    "\n",
+    "Similar to MATLAB, you can separate the code into cells by lines starting with either:\n",
+    "- `#%%` (standard cell separator)\n",
+    "- `# %%` (standard cell separator, when file has been edited with Eclipse)\n",
+    "- `# <codecell>` (IPython notebook cell separator)\n",
+    "- `#### YourComment`to add a comment to the outline\n",
+    "\n",
+    "\n",
+    "Learn from https://docs.spyder-ide.org/index.html\n",
+    "\n",
+    "Spyder has integration with **pdb** a python debugger. Read more at https://pythonconquerstheuniverse.wordpress.com/2009/09/10/debugging-in-python/.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
