corrections to day 1 assignment
Words

--- a/Week 1 Python/Day 1/Assignment.ipynb
+++ b/Week 1 Python/Day 1/Assignment.ipynb
@@ -20,7 +20,9 @@
     "\n",
     "https://www.youtube.com/watch?v=liIlW-ovx0Y\n",
     "\n",
-    "For this assignment you will be creating a simple calculator method that gives a number of swallows $N_s$ required to carry a given coconut of weight $W_c$. Given that the swallow carrying capacity $C_s$ using the simple formula of $N_s = W_c/ C_s$\n",
+    "For this assignment you will be creating a simple calculator method that gives a number of swallows $N_s$ required to carry a given coconut of weight $W_c$. Given that the swallow carrying capacity $C_s$ using the simple formula:\n",
+    " \n",
+    "$N_s = \\frac{W_c}{ C_s}$\n",
     "\n",
     "The method should take two parameters\n",
     "- coconut weight (in grams)\n",
@@ -106,7 +108,7 @@
    "source": [
     "### E) \n",
     "Considering that many swallows would have trouble grasping the same coconut, assume that they have constructed a carrying net out of creeping vine.\n",
-    "The net would have a base weight $W_{n}$ and every additional swallow would require a personal strand $W_{st}$ attached to the net in order to participate in the carrying. \n",
+    "The net would have a base weight $W_{n}$ default value 200g and every additional swallow would require a personal strand $W_{st}$ attached to the net in order to participate in the carrying with a default value of 5g. \n",
     "\n",
     "$$ N_s=\\frac{W_c + W_n}{C_s - W_{st}}$$\n",
     "\n",
@@ -114,8 +116,8 @@
     "As there is a possibility that the $W_{st}$ exceeds the $C_s$ control for this in your method by giving a helpful output if this is the case like \"What i don't know that?!\"   \n",
     "\n",
     "### G (Optional) \n",
-    "Modify the method further as you see fit to make it even more accurate\n",
-    "For example for the number of swallows that can attach to the net without the need for personal strand\n",
+    "Modify the method further as you see fit to make it even more accurate.\n",
+    "For example control for the number of swallows that can attach to the net without the need for personal strand\n",
     "\n",
     "## Part 2: Neuroscience technobabble/subfield generator"
    ],
