--- a/Week 1 Python/Day 1/Assignment.ipynb
+++ b/Week 1 Python/Day 1/Assignment.ipynb
@@ -41,10 +41,10 @@
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Placeholder\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
@@ -81,30 +81,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%% \n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Hello Neuro-insight!\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
     "world = \"Neuro-insight\"\n",
     "print(f'Hello {world}!')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% \n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### E) \n",
     "Considering that many swallows would have trouble grasping the same coconut, assume that they have constructed a carrying net out of creeping vine.\n",
@@ -119,14 +123,62 @@
     "Modify the method further as you see fit to make it even more accurate.\n",
     "For example control for the number of swallows that can attach to the net without the need for personal strand\n",
     "\n",
-    "## Part 2: Neuroscience technobabble/subfield generator"
-   ],
+    "## Part 2: Neuroscience technobabble/subfield/research paper generator\n",
+    "Having trouble thinking of your next research topic?\n",
+    "\n",
+    "Are your presentations making too much sense? \n",
+    "\n",
+    "No?... well regardless for this assignment we will be making a technobabble generator. \n",
+    "There are two provided files. \"Noun.txt\" and \"Term.txt\"\n",
+    "The goal is simple. when called the method new_paper should return a noun and a term, \n",
+    "making essentially a new term like \"in vivo epigenetics\", \n",
+    "this can be done by simply picking a random noun and a random term.\n",
+    "\n",
+    "https://www.youtube.com/watch?v=h4idB5KAfyc\n",
+    "\n",
+    "Tips: The files are in utf-8 encoding so read them with the parameter \n",
+    ">encoding=\"utf8\" \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['amyloid-beta (Aβ) protein', 'brain stem', 'Broca’s area', 'cerebrum', 'enzyme', 'in vivo', 'in vitro', 'in silico', 'induced pluripotent stem cell']\n",
+      "['concussion', 'cognition', 'consciousness', 'brain-computer interface', 'neurotransmitters', 'addiction', 'action potential', 'Alzheimer’s disease', 'angiography', 'epigenetics', 'fissure', 'gene expression']\n",
+      "brain stem brain-computer interface\n",
+      "brain stem epigenetics\n",
+      "cerebrum Alzheimer’s disease\n",
+      "brain stem addiction\n",
+      "in vivo addiction\n",
+      "in silico consciousness\n",
+      "brain stem epigenetics\n",
+      "enzyme concussion\n",
+      "in vitro brain-computer interface\n",
+      "in vivo angiography\n"
+     ]
+    }
+   ],
+   "source": [
+    "def new_paper_candidates(number_of_candidates=5):\n",
+    "    print(\"new paper\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -150,7 +202,9 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
+    "source": [
+     "from IPython.display import HTML\n"
+    ],
     "metadata": {
      "collapsed": false
     }
