--- a/Week 1 Python/Day 1/Assignment.ipynb
+++ b/Week 1 Python/Day 1/Assignment.ipynb
@@ -10,6 +10,7 @@
    },
    "source": [
     "# Assignment 1\n",
+    "For this assignment we will be practicing some simple native python. Some of you might be very confident in this topic so if you are only part 3 or both part 1 and 2 is strictly required to pass this assignment.\n",
     "## Part 1: Laden swallow calculator\n",
     "### A)\n",
     "\n",
@@ -170,15 +171,30 @@
    ],
    "source": [
     "def new_paper_candidates(number_of_candidates=5):\n",
-    "    print(\"new paper\")"
+    "    print(\"new paper\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "source": [
+    "### Part 3: Problem solving\n",
+    "Solve some simple task you do manually with a stand alone python script. \n",
+    "\n",
+    "Some simple examples:\n",
+    "- Rename a set of files in a folder\n",
+    "- Move all files of specific type to another folder\n",
+    "- Zip all the files in a folder\n",
+    "- Generate a string matrix of useful formulas \n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
