worked on day 20

--- a/CaImagingWeek/Day 2/Learning Notebook.ipynb
+++ b/CaImagingWeek/Day 2/Learning Notebook.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "cf72605f",
+   "id": "326b178d",
    "metadata": {},
    "source": [
     "Yesterday we had a first look at how calcium imaging data looks like. Today we will take a deep dive into how to convert that data into clean and meaningful traces that describe the activity of individual neurons. We will structure today by looking at different scenarios in calcium imaging experiments, describing the problems that can arise, and what solutions are on-hand to fix them. \n",
@@ -22,7 +22,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "8e0cdf73",
+   "id": "551a53ce",
    "metadata": {},
    "source": [
     "### Converting Terabytes to Megabytes\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f869dbdc",
+   "id": "33887abe",
    "metadata": {},
    "source": [
     "### The Distracted scenario\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ca2c26a",
+   "id": "690d6bf3",
    "metadata": {},
    "source": [
     "### Follow-up on our distracted friend\n",
@@ -72,7 +72,7 @@
     "#### The Problem: Light contamination\n",
     "When you are using light as your stimulus, which is very often the case in visual neuroscience, any stray photons can be picked up by the sensitive PMTs in your microscope. You will notice this most likely during the imaging. You can also see it easily in the neural traces, as it will be a square-shaped modulation of the signal during the time of the stimulus, which is very unlike the sharp-rise-slow-decay shape of the calcium transient.\n",
     "#### The solution: Background subtraction\n",
-    "Ok, well actually the solution to this is to improve your light shielding. This really is an important step, and it's worth the time you put into it, because light contaminated data will never be fully uncontaminated. BUT, you can get rid of most of the problem by drawing an ROI around some dark part of the image (usually a vessel, to make sure there will be no activity there) and subtracting this from the rest of your traces."
+    "Ok, well actually the solution to this is to improve your light shielding. This really is an important step, and it's worth the time you put into it, because light contaminated data will never be fully uncontaminated. Alternatively you can also invest in a system where the monitor is turned off during scanning and only is on when the mirrors are turning around. BUT, you can get rid of most of the problem by drawing an ROI around some dark part of the image (usually a vessel, to make sure there will be no activity there) and subtracting this from the rest of your traces."
    ]
   },
   {
@@ -82,7 +82,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "517cc835",
+   "id": "c8a111a2",
    "metadata": {},
    "source": [
     "### The Want-To-Have-My-Cake-and-eat-it-too scenario\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7354d31f",
+   "id": "2057494d",
    "metadata": {},
    "outputs": [],
    "source": []
