--- a/Week_1_Python/Day_1/Assignment.ipynb
+++ b/Week_1_Python/Day_1/Assignment.ipynb
@@ -22,10 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
-     "is_executing": false,
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -45,7 +45,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x23f7e42fe48>"
+       "<IPython.lib.display.YouTubeVideo at 0x2c07975ff48>"
       ]
      },
      "metadata": {},
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%% \n"
@@ -207,7 +207,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x23f7dfc11c8>"
+       "<IPython.lib.display.YouTubeVideo at 0x2c0797c5f48>"
       ]
      },
      "metadata": {},
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -291,30 +291,17 @@
     "- Rename a set of files in a folder\n",
     "- Move all files of specific type to another folder\n",
     "- Zip all the files in a folder\n",
-    "- Generate a string matrix of useful formulas \n",
-    "\n"
+    "- Generate a string matrix of useful formulas "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Part 4 Additional Optional tasks\n",
+    "\n",
+    "https://www.practicepython.org/\n"
+   ]
   }
  ],
  "metadata": {
