--- a/CaImagingWeek/brain_observatory (1).ipynb
+++ b/CaImagingWeek/brain_observatory (1).ipynb
@@ -20,42 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'imresize' from 'scipy.misc' (/Users/marina/anaconda3/envs/ni/lib/python3.9/site-packages/scipy/misc/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-6b2073fba8a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmisc\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimresize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'imresize' from 'scipy.misc' (/Users/marina/anaconda3/envs/ni/lib/python3.9/site-packages/scipy/misc/__init__.py)"
-     ]
-    }
-   ],
-   "source": [
-    "from scipy.misc import imresize"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'imresize' from 'scipy.misc' (/Users/marina/anaconda3/envs/ni/lib/python3.9/site-packages/scipy/misc/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-13c019d8d1a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mallensdk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbrain_observatory_cache\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBrainObservatoryCache\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpprint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# This class uses a 'manifest' to keep track of downloaded data and metadata.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# All downloaded files will be stored relative to the directory holding the manifest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/ni/lib/python3.9/site-packages/allensdk/core/brain_observatory_cache.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson_utilities\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mju\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mallensdk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcache\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCache\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mallensdk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqueries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbrain_observatory_api\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBrainObservatoryApi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mallensdk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmanifest_builder\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mManifestBuilder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mbrain_observatory_nwb_data_set\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBrainObservatoryNwbDataSet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/ni/lib/python3.9/site-packages/allensdk/api/queries/brain_observatory_api.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mallensdk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmanifest\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mManifest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mallensdk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbrain_observatory\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstimulus_info\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mstimulus_info\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mrma_template\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRmaTemplate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/ni/lib/python3.9/site-packages/allensdk/brain_observatory/stimulus_info.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minterpolation\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mspndi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmisc\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimresize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mallensdk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcache\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmemoize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'imresize' from 'scipy.misc' (/Users/marina/anaconda3/envs/ni/lib/python3.9/site-packages/scipy/misc/__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all targeted structures: ['VISal', 'VISam', 'VISl', 'VISp', 'VISpm', 'VISrl']\n"
      ]
     }
    ],
@@ -83,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all VISp experiment containers: 46\n"
+      "all VISp experiment containers: 216\n"
      ]
     }
    ],
@@ -102,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all imaging depths: [175, 265, 275, 300, 320, 325, 335, 350, 365, 375]\n"
+      "all imaging depths: [175, 185, 195, 200, 205, 225, 250, 265, 275, 276, 285, 300, 320, 325, 335, 350, 365, 375, 390, 400, 550, 570, 625]\n"
      ]
     }
    ],
@@ -154,12 +126,19 @@
      "text": [
       "all cre lines:\n",
       "\n",
-      "[u'Cux2-CreERT2',\n",
-      " u'Emx1-IRES-Cre',\n",
-      " u'Nr5a1-Cre',\n",
-      " u'Rbp4-Cre_KL100',\n",
-      " u'Rorb-IRES2-Cre',\n",
-      " u'Scnn1a-Tg3-Cre']\n"
+      "['Cux2-CreERT2',\n",
+      " 'Emx1-IRES-Cre',\n",
+      " 'Fezf2-CreER',\n",
+      " 'Nr5a1-Cre',\n",
+      " 'Ntsr1-Cre_GN220',\n",
+      " 'Pvalb-IRES-Cre',\n",
+      " 'Rbp4-Cre_KL100',\n",
+      " 'Rorb-IRES2-Cre',\n",
+      " 'Scnn1a-Tg3-Cre',\n",
+      " 'Slc17a7-IRES2-Cre',\n",
+      " 'Sst-IRES-Cre',\n",
+      " 'Tlx3-Cre_PL56',\n",
+      " 'Vip-IRES-Cre']\n"
      ]
     }
    ],
@@ -179,18 +158,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cux2 experiments: 62\n",
+      "Cux2 experiments: 76\n",
       "\n",
       "Example experiment container record:\n",
-      "{'cre_line': u'Cux2-CreERT2',\n",
-      " 'donor_name': u'283284',\n",
+      "{'cre_line': 'Cux2-CreERT2',\n",
+      " 'donor_name': '222426',\n",
       " 'failed': False,\n",
-      " 'id': 566759225,\n",
-      " 'imaging_depth': 275,\n",
-      " 'reporter_line': u'Ai93(TITL-GCaMP6f)',\n",
-      " 'specimen_name': u'Cux2-CreERT2;Camk2a-tTA;Ai93-283284',\n",
+      " 'id': 511510736,\n",
+      " 'imaging_depth': 175,\n",
+      " 'reporter_line': 'Ai93(TITL-GCaMP6f)',\n",
+      " 'specimen_name': 'Cux2-CreERT2;Camk2a-tTA;Ai93-222426',\n",
       " 'tags': [],\n",
-      " 'targeted_structure': u'VISam'}\n"
+      " 'targeted_structure': 'VISp'}\n"
      ]
     }
    ],
@@ -220,41 +199,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiments for experiment_container_id 566759225: 3\n",
+      "Experiments for experiment_container_id 511510736: 3\n",
       "\n",
-      "[{'acquisition_age_days': 129,\n",
-      "  'cre_line': u'Cux2-CreERT2',\n",
-      "  'donor_name': u'283284',\n",
-      "  'experiment_container_id': 566759225,\n",
-      "  'fail_eye_tracking': False,\n",
-      "  'id': 569494121,\n",
-      "  'imaging_depth': 275,\n",
-      "  'reporter_line': u'Ai93(TITL-GCaMP6f)',\n",
-      "  'session_type': u'three_session_C2',\n",
-      "  'specimen_name': u'Cux2-CreERT2;Camk2a-tTA;Ai93-283284',\n",
-      "  'targeted_structure': u'VISam'},\n",
-      " {'acquisition_age_days': 128,\n",
-      "  'cre_line': u'Cux2-CreERT2',\n",
-      "  'donor_name': u'283284',\n",
-      "  'experiment_container_id': 566759225,\n",
-      "  'fail_eye_tracking': False,\n",
-      "  'id': 569407590,\n",
-      "  'imaging_depth': 275,\n",
-      "  'reporter_line': u'Ai93(TITL-GCaMP6f)',\n",
-      "  'session_type': u'three_session_B',\n",
-      "  'specimen_name': u'Cux2-CreERT2;Camk2a-tTA;Ai93-283284',\n",
-      "  'targeted_structure': u'VISam'},\n",
-      " {'acquisition_age_days': 140,\n",
-      "  'cre_line': u'Cux2-CreERT2',\n",
-      "  'donor_name': u'283284',\n",
-      "  'experiment_container_id': 566759225,\n",
-      "  'fail_eye_tracking': False,\n",
-      "  'id': 570305847,\n",
-      "  'imaging_depth': 275,\n",
-      "  'reporter_line': u'Ai93(TITL-GCaMP6f)',\n",
-      "  'session_type': u'three_session_A',\n",
-      "  'specimen_name': u'Cux2-CreERT2;Camk2a-tTA;Ai93-283284',\n",
-      "  'targeted_structure': u'VISam'}]\n"
+      "[{'acquisition_age_days': 103,\n",
+      "  'cre_line': 'Cux2-CreERT2',\n",
+      "  'donor_name': '222426',\n",
+      "  'experiment_container_id': 511510736,\n",
+      "  'fail_eye_tracking': True,\n",
+      "  'id': 501559087,\n",
+      "  'imaging_depth': 175,\n",
+      "  'reporter_line': 'Ai93(TITL-GCaMP6f)',\n",
+      "  'session_type': 'three_session_B',\n",
+      "  'specimen_name': 'Cux2-CreERT2;Camk2a-tTA;Ai93-222426',\n",
+      "  'targeted_structure': 'VISp'},\n",
+      " {'acquisition_age_days': 104,\n",
+      "  'cre_line': 'Cux2-CreERT2',\n",
+      "  'donor_name': '222426',\n",
+      "  'experiment_container_id': 511510736,\n",
+      "  'fail_eye_tracking': True,\n",
+      "  'id': 501704220,\n",
+      "  'imaging_depth': 175,\n",
+      "  'reporter_line': 'Ai93(TITL-GCaMP6f)',\n",
+      "  'session_type': 'three_session_A',\n",
+      "  'specimen_name': 'Cux2-CreERT2;Camk2a-tTA;Ai93-222426',\n",
+      "  'targeted_structure': 'VISp'},\n",
+      " {'acquisition_age_days': 102,\n",
+      "  'cre_line': 'Cux2-CreERT2',\n",
+      "  'donor_name': '222426',\n",
+      "  'experiment_container_id': 511510736,\n",
+      "  'fail_eye_tracking': True,\n",
+      "  'id': 501474098,\n",
+      "  'imaging_depth': 175,\n",
+      "  'reporter_line': 'Ai93(TITL-GCaMP6f)',\n",
+      "  'session_type': 'three_session_C',\n",
+      "  'specimen_name': 'Cux2-CreERT2;Camk2a-tTA;Ai93-222426',\n",
+      "  'targeted_structure': 'VISp'}]\n"
      ]
     }
    ],
@@ -1045,7 +1024,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1059,7 +1038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
