--- a/Week_1_Python/Day_1/Assignment.ipynb
+++ b/Week_1_Python/Day_1/Assignment.ipynb
@@ -128,7 +128,7 @@
     "\n",
     "Modify the method in the following way:\n",
     "\n",
-    "Round the answer up to the nearest whole number(roof the number) using only native python (No imports!)"
+    "Round the answer up to the nearest whole number(roof/ceil the number) using only native python (No imports!)"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "source": [
     "### C)\n",
-    "Modify the solution to use the method Math.roof instead... (Sorry)"
+    "Modify the solution to use the method Math.ceil instead... (Sorry)"
    ],
    "metadata": {
     "collapsed": false
@@ -386,7 +386,7 @@
    },
    "outputs": [],
    "source": [
-    "def new_paper_candidates(number_of_candidates=5):\n",
+    "def new_paper_candidates():\n",
     "    print(\"new paper\")\n"
    ]
   },
