--- a/Week_1_Python/Day_1/Assignment.ipynb
+++ b/Week_1_Python/Day_1/Assignment.ipynb
@@ -372,7 +372,9 @@
    },
    "source": [
     "Tips: The files are in utf-8 encoding so read them with the parameter \n",
-    ">encoding=\"utf8\" \n"
+    ">encoding=\"utf8\" \n",
+    "\n",
+    "Tips2: if you cant find the file using a direct path, use an absolute path to the Noun.txt file."
    ]
   },
   {
