assignment 1 part 2 improved

--- a/Week_1_Python/Day_1/Assignment.ipynb
+++ b/Week_1_Python/Day_1/Assignment.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": true,
@@ -52,18 +52,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x168c036ba88>"
+       "<IPython.lib.display.YouTubeVideo at 0x28d348628c8>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 0 ns\n"
-     ]
     }
    ],
    "source": [
@@ -133,65 +126,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Placeholder\n"
+     ]
+    }
+   ],
    "source": [
     "def NOS():\n",
     "    print(\"Placeholder\")\n",
     "    # your code here  \n",
     "\n",
     "NOS()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### C)\n",
     "Modify the solution to use the method Math.ceil instead... (Sorry)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Placeholder\n"
+     ]
+    }
+   ],
    "source": [
     "def NOS():\n",
     "    print(\"Placeholder\")\n",
     "    # your code here  \n",
     "\n",
     "NOS()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### D)\n",
     "Modify the solution to print the answer as a sentence \"it would require 52 european swallows to carry a coconut weighing 1200 grams\"\n",
     "\n",
     "Tip: use string interpolation"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -233,102 +236,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Placeholder\n"
+     ]
+    }
+   ],
    "source": [
     "def NOS():\n",
     "    print(\"Placeholder\")\n",
     "    # your code here  \n",
     "\n",
     "NOS()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### F)\n",
     "As there is a possibility that the $W_{st}$ exceeds the $C_s$ control for this in your method by giving a helpful output if this is the case like \"What i don't know that?!\"   "
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Placeholder\n"
+     ]
+    }
+   ],
    "source": [
     "def NOS():\n",
     "    print(\"Placeholder\")\n",
     "    # your code here  \n",
     "\n",
     "NOS()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### G (Optional) \n",
     "Modify the method further as you see fit to make it even more accurate.\n",
     "For example control for the number of swallows that can attach to the net without the need for personal strand"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Placeholder\n"
+     ]
+    }
+   ],
    "source": [
     "def NOS():\n",
     "    print(\"Placeholder\")\n",
     "    # your code here  \n",
     "\n",
     "NOS()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## Part 2: Neuroscience technobabble/subfield/research paper generator\n",
+    "## Part 2: Neuroscience technobabble/research paper generator\n",
     "Having trouble thinking of your next research topic?\n",
     "\n",
     "Are your presentations making too much sense? \n",
     "\n",
     "No?... well regardless for this assignment we will be making a technobabble generator. \n",
     "\n",
+    "So far we have been concerined with how a swallow can carry a cocunuit now we will take the interventionist approach and try to find out what regulates such behavior. \n",
+    "\n",
+    "We will take inspiration from https://doi.org/10.1016/j.neuron.2016.12.041 (Krakauer, John W., et al. \"Neuroscience needs behavior: correcting a reductionist bias.\" Neuron 93.3 (2017): 480-490.) \n",
+    "and implement a interventionist approach generator. \n",
+    "\n",
+    "\n",
+    "![interventionist approach](../Resources/useful/interventionistApproach.jpg)\n",
+    "\n",
+    "<div class=\"alert alert-warning\">\n",
+    "  <b>warning:</b> this is task missunderstanding the point of the article.\n",
+    "</div>\n",
+    "\n",
+    "\n",
     "### A)\n",
-    "There are two provided files. \"Noun.txt\" and \"Term.txt\"\n",
-    "The goal is simple. when called the method new_paper should return a noun and a term, \n",
-    "making essentially a new term like \"in vivo epigenetics\", \n",
-    "this can be done by simply picking a random noun and a random term."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "There are three provided files. \"Curcuit.txt\", \"Filler.txt\" and \"Behavior.txt\"\n",
+    "The goal is simple. when called the method new_paper should return a string combining a circuit a filler and a behavior in this order. \n",
+    "this essentially makes a new conscept like \"Theta-gamma coupling at the temporal lobe shapes cocunut carying behavior\", \n",
+    "this can be done by picking a random line from each file and combining them. "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%% \n"
@@ -350,7 +381,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x168c0369208>"
+       "<IPython.lib.display.YouTubeVideo at 0x28d348b4048>"
       ]
      },
      "metadata": {},
@@ -374,22 +405,43 @@
     "Tips: The files are in utf-8 encoding so read them with the parameter \n",
     ">encoding=\"utf8\" \n",
     "\n",
-    "Tips2: if you cant find the file using a direct path, use an absolute path to the Noun.txt file."
+    "Tips2: if you cant find the file using a direct path, use an absolute path to the txt file.\n",
+    "\n",
+    "<div class=\"alert alert-warning\">\n",
+    "  <b>Warning:</b> Neuro-insight is not responsable for the publishability or comunity backlash from said paper, publishability may vary.\n",
+    "</div>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "is_executing": false,
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default mode network connectivity is associated with predictive coding\n",
+      "superior colliculus determines predictive coding\n",
+      "Default mode network connectivity reveals depressive behavior\n",
+      "FOXP2 polymorphism supports verbal declarative memory\n",
+      "FOXP2 polymorphism involves spatial navigation\n",
+      "interneurons in visual cortex induces depressive behavior\n",
+      "superior colliculus underlies verbal declarative memory\n",
+      "superior colliculus regulates breathing\n",
+      "Default mode network connectivity generates hunting\n",
+      "superior colliculus involves hunting\n"
+     ]
+    }
+   ],
    "source": [
-    "def new_paper_candidates():\n",
-    "    print(\"new paper\")\n"
+    "def new_paper_candidates(number_of_candidates=5):\n",
+    "    print(\"placeholder\")\n"
    ]
   },
   {
@@ -468,12 +520,12 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [
-     "from IPython.display import YouTubeVideo\n"
-    ],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": [
+     "from IPython.display import YouTubeVideo\n"
+    ]
    }
   }
  },
