--- a/Week_1_Python/Day_1/Learning_4_How_to_Get_Out_of_Truble.ipynb
+++ b/Week_1_Python/Day_1/Learning_4_How_to_Get_Out_of_Truble.ipynb
@@ -68,7 +68,10 @@
     "The integrated search bar features tag searching, so if your interested in a question about matplotlib, it might be helpful to tag your question [matplotlib]\n",
     "If you think there should be a Q/A for your issue but cant find one? try searching for just a tag and ordering by frequency or votes. \n",
     "Ask a question, but before you do, understand what the guidelines are: https://stackoverflow.com/help/how-to-ask and steel yourself to the possibility that stackoverflow can be harsh or mean or even outright toxic, though there is some information that might help you understand why https://meta.stackexchange.com/a/342788  \n",
-    "The Debugger\n",
+    "\n",
+    "![StackOverflow](../Resources/memes/StackOverflow.jpg)\n",
+    "\n",
+    "## The Debugger\n",
     "\n",
     "A debugging tool is usually integrated in most IDE's and learning to harness its power is well worth the effort. Print(\"here\") might get you far, but the debugger can get you further!\n",
     "\n",
@@ -104,8 +107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": []
   }
