Motivation for yml export

--- a/Week_1_Python/Day_3/Learning_1_Conda.ipynb
+++ b/Week_1_Python/Day_3/Learning_1_Conda.ipynb
@@ -75,9 +75,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.20.3\n",
-      "0.24.2\n",
-      "1.6.2\n"
+      "1.18.1\n",
+      "0.22.1\n",
+      "1.4.1\n"
      ]
     }
    ],
@@ -92,17 +92,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
+   "metadata": {},
    "source": [
     "the reson you have scipy as well is because it is already a dependency for scikit-learn \n",
     "\n",
+    "<div class=\"alert alert-info\">\n",
+    "    <b>Note:</b> Not everything is in Conda, some dependencies might have to be installed with pip, or even manually.\n",
+    "</div>\n",
+    "\n",
     "### Step 4: Exporting your environment\n",
+    "Its very useful to document what dependencies was used for your code, if you are collaborating its very useful to have the same dependencies otherwise you might tempt faith and increase the chance of:\n",
+    "\n",
+    "<div style=\"overflow:hidden\">\n",
+    "    <img style=\"float:left; max-width:300px;\" src=\"../resources/memes/myMachine.png\">\n",
+    "</div>\n",
+    "\n",
+    "Even if your not collaborating, trying to find out what was used later can be difficult as dependencies are not always backwards compatible. \n",
+    "\n",
     "1. conda env export --name w1_python > environment.yml \n",
     "2. (option) commit this to your github repository \n",
+    "\n",
     "\n",
     "### Addition: How to import a environment \n",
     "1. conda env create --file envname.yml\n",
@@ -113,6 +122,15 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "source": []
   },
   {
    "cell_type": "code",
@@ -138,7 +156,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "metadata": {
+     "collapsed": false
+    },
+    "source": []
+   }
   }
  },
  "nbformat": 4,
