--- a/Week_1_Python/Day_1/Assignment.ipynb
+++ b/Week_1_Python/Day_1/Assignment.ipynb
@@ -52,7 +52,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x28d348628c8>"
+       "<IPython.lib.display.YouTubeVideo at 0x279a1e737c8>"
       ]
      },
      "metadata": {},
@@ -337,7 +337,7 @@
     "\n",
     "No?... well regardless for this assignment we will be making a technobabble generator. \n",
     "\n",
-    "So far we have been concerined with how a swallow can carry a cocunuit now we will take the interventionist approach and try to find out what regulates such behavior. \n",
+    "So far we have been concerned with how a swallow can carry a coconut now we will take the interventionist approach and try to find out what regulates such behavior. \n",
     "\n",
     "We will take inspiration from https://doi.org/10.1016/j.neuron.2016.12.041 (Krakauer, John W., et al. \"Neuroscience needs behavior: correcting a reductionist bias.\" Neuron 93.3 (2017): 480-490.) \n",
     "and implement a interventionist approach generator. \n",
@@ -346,14 +346,14 @@
     "![interventionist approach](../Resources/useful/interventionistApproach.jpg)\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
-    "  <b>warning:</b> this is task missunderstanding the point of the article.\n",
+    "  <b>warning:</b> this is task misunderstanding the point of the article.\n",
     "</div>\n",
     "\n",
     "\n",
     "### A)\n",
     "There are three provided files. \"Curcuit.txt\", \"Filler.txt\" and \"Behavior.txt\"\n",
     "The goal is simple. when called the method new_paper should return a string combining a circuit a filler and a behavior in this order. \n",
-    "this essentially makes a new conscept like \"Theta-gamma coupling at the temporal lobe shapes cocunut carying behavior\", \n",
+    "this essentially makes a new concept like \"Theta-gamma coupling at the temporal lobe shapes coconut carrying behavior\", \n",
     "this can be done by picking a random line from each file and combining them. "
    ]
   },
@@ -405,10 +405,10 @@
     "Tips: The files are in utf-8 encoding so read them with the parameter \n",
     ">encoding=\"utf8\" \n",
     "\n",
-    "Tips2: if you cant find the file using a direct path, use an absolute path to the txt file.\n",
+    "Tips 2: if you cant find the file using a direct path, use an absolute path to the txt file.\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
-    "  <b>Warning:</b> Neuro-insight is not responsable for the publishability or comunity backlash from said paper, publishability may vary.\n",
+    "  <b>Warning:</b> Neuro-insight is not responsible for the publishability or community backlash from said paper, publishability may vary.\n",
     "</div>\n"
    ]
   },
